# agentic-vault

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/agentic_vault/: __init__.py  agent.py  auth.py  config.py  db.py  guard.py  ingest.py  main.py  memory.py  rag.py  session.py
src/agentic_vault/static/: app.html  app.js  login.html  login.js  styles.css
tests/: conftest.py  test_auth.py  test_guard.py  test_routes.py
