[project]
name = "agentic-vault"
version = "0.1.0"
description = "Multi-turn, streaming, authenticated agentic-RAG chat agent over an Obsidian vault corpus."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.0.0",
    "langfuse>=4.6.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.10.0",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_vault"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
typeCheckingMode = "standard"
# LangChain ships incomplete type stubs; silence the noise these rules generate
# without losing real type discipline.
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
